# mechatronics

./: .gitignore  pyproject.toml
mechatronics/: discretization.py  estimation.py  models.py  mpc.py  trajectories.py
mechatronics/apps/: autonomous_car_examples.py  bicycle_model_example.py  least_square_example.py  magnetic_train_example.py  tracker2d_example.py  view_car_trajectories.py  view_trajectories.py  water_tank_example.py
notes/: notes.tex
tests/: test_autonomous_car_example.py  test_discretization.py  test_models.py  test_mpc.py  test_trajectories.py
