[tool.poetry]
name = "mechatronics"
version = "0.1.0"
description = "A collection of tools for design and simulation of mechatronic systems."
authors = ["simoore"]
packages = [{include = "mechatronics"}]

[tool.poetry.dependencies]
python = "^3.11"
control = "^0.10"
matplotlib = "^3.8"
numpy = "^1.26"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
